# agentic-canvas

./: .gitignore  .npmrc  .roomodes  CLAUDE.md  README.md  llms.txt  package.json  pnpm-lock.yaml  test-import.tsx  vite.config.ts
.devcontainer/: devcontainer.json
.roo/rules-designer/: rules.md
app/: entry.server.tsx  routes.ts
app/routes/: api.chat.ts  chat.$conversationId.tsx  chat._index.tsx  test.tsx
app/utils/: ai-client.ts  api.ts  types.ts
aspire/: aspire.sln
aspire/aspire.AppHost/: AppHost.cs  aspire.AppHost.csproj
docs/: README.md  ai-architecture.md  api-specifications.md  architecture-decisions.md  backend-architecture.md  database-schema.md  development-log.md  development-roadmap.md  frontend-architecture.md  product-requirements.md  shadcn-component-catalog.md  technical-architecture.md  ui-ux-design.md
docs/adr/: 001-legend-state-imports.md  002-dom-based-canvas-nodes.md  003-hooks-for-canvas-behaviors.md
docs/stories/: 01-user-authentication.md  02-create-dashboard.md  03-add-data-widgets.md  04-connect-data-sources.md  05-ai-dashboard-generation.md  06-workflow-automation.md  07-dashboard-sharing.md  (+1 more)
servers/llm-server/: .env.sample  .gitignore  config.yaml  pyproject.toml
servers/llm-server/src/: main.py
servers/llm-server/src/agents/: main_agent.py
servers/llm-server/src/api/: agents.py  chat.py  tools.py
servers/llm-server/src/models/: api.py
servers/llm-server/src/services/: config.py  db.py
servers/llm-server/src/tools/: github.py  web_search.py
src/: App.css  App.tsx
webapp/: package.json  pnpm-lock.yaml
(+21 files in other folders)
